...
    <string name="action_open_settings">Open Settings</string>
    <string name="action_pause">Pause</string>
    <string name="action_play">Play</string>
    <string name="action_preparing">Preparing&#8230;</string>
    <string name="action_restore">Restore</string>
    <string name="action_restoring">Restoring&#8230;</string>
    <string name="action_save">Save</string>
    <string name="action_save_to_profile">Save to Profile</string>
    <string name="action_share_png">Share PNG</string>
    <string name="action_share_wav">Share WAV</string>
    <string name="action_share_results">Share Results</string>
    <string name="action_showing_all">Showing All</string>
    <string name="action_start_measuring">Start Measuring</string>
    <string name="action_start_test">Start Test</string>
    <string name="action_start_test_arrow">Start Test &#8594;</string>
    <string name="action_try_again">Try Again</string>
    <string name="action_upgrade">Upgrade</string>
    <string name="action_upgrade_to_pro">Upgrade to Pro</string>
    <string name="action_view_all">View All</string>

    <string name="a11y_audiogram_chart_empty">Relative hearing threshold chart. No relative level data available.</string>
    <string name="a11y_audiogram_chart_with_data">Relative hearing threshold chart. %1$s. %2$s.</string>
    <string name="a11y_audiogram_ear_empty">%1$s ear has no relative level data</string>
...
        <item quantity="other">Time series chart. %1$d samples over %2$s. %6$s %3$s dB, minimum %4$s dB, maximum %5$s dB.</item>
    </plurals>
    <string name="report_unlimited_history_title">Unlimited History</string>
    <string name="value_unavailable">N/A</string>
    <string name="value_unknown_em_dash" translatable="false">&#8212;</string>
    <string name="value_available">Available</string>
    <string name="value_disabled">Disabled</string>
    <string name="value_enabled">Enabled</string>

    <string name="response_time_fast">Fast</string>
    <string name="response_time_impulse">Impulse</string>
    <string name="response_time_slow">Slow</string>

...
    <string name="widget_hours_ago">%1$dh ago</string>
    <string name="widget_days_ago">%1$dd ago</string>
    <string name="widget_error_subtitle">Open dBcheck to refresh</string>
    <string name="widget_error_title">Unable to load widget</string>
    <string name="widget_pro_title">dBcheck Pro</string>
    <string name="widget_upgrade_to_unlock">Upgrade to unlock</string>
    <string name="hearing_relative_db_value">%1$s dB relative</string>
    <string name="hearing_audiogram_threshold">%1$s Hz %2$s dB relative</string>
    <string name="last_24_hours_average_without_trend">Estimated average %1$d dBA</string>
</resources>

